fix align center buttons

--- a/scss/components/_booking.scss
+++ b/scss/components/_booking.scss
@@ -39,6 +39,12 @@
     background-color: #fff;
     color: $dark-grey;
   }
+
+  &__button--container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 }
 
 @media (max-width: 1200px) {
@@ -57,6 +63,9 @@
     &__block {
       top: 10%;
     }
+    &__btn {
+      margin: 0 10px;
+    }
   }
 }
 
@@ -71,10 +80,6 @@
 
     &__heading {
       font-size: 27px;
-    }
-    &__button--container {
-      display: flex;
-      flex-direction: column;
     }
     &__btn {
       margin-top: 15px;
